<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Login and Registration</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="hint_token_name">Token Name</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="token_name">Token Name</string>
    <string name="btn_edit_save_token">Guardar Token</string>
    <string name="btn_edit_cancel_token">Cancelar Edição</string>
    <string name="btn_save">Save</string>
    <string name="token">Token</string>
    <string name="email">Email</string>
    <string name="btn_edit_token">EDIT TOKEN</string>
    <string name="btn_edit_user">EDIT USER</string>
    <string name="avatar">Avatar</string>

</resources>