<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical" >

        <!-- User Information -->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:orientation="vertical" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20dp" />
        <TextView
            android:id="@+id/username_label"
            android:layout_width="wrap_content"
            android:text="@string/name"
            android:layout_height="wrap_content"
            android:textSize="13dp" />
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textColor="@color/lbl_name"
            android:textSize="13dp" />

        <TextView
            android:id="@+id/email_label"
            android:layout_width="wrap_content"
            android:text="@string/email"
            android:layout_height="wrap_content"
            android:textSize="13dp" />
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp" />


        <Button
            android:id="@+id/btnEditUser"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@color/bg_main"
            android:text="@string/btn_edit_user"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>
        <!--End User Information -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center"
            android:orientation="vertical" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/token"
                android:textSize="20dp" />
            <TextView
                android:id="@+id/token_label_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/avatar"
                android:textSize="13dp" />

            <ImageView
                android:id="@+id/token_image"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/paper"
                android:layout_weight="0.18"
                />

            <TextView
                android:id="@+id/token_label_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="13dp" />
            <TextView
                android:id="@+id/token_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="13dp" />
            <Button
                android:id="@+id/btnEditToken"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dip"
                android:background="@color/bg_main"
                android:text="@string/btn_edit_token"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15dp" />

        </LinearLayout>
        <!--End Token Information -->



        <Button
            android:id="@+id/btnLogout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:background="@color/btn_login"
            android:text="@string/btn_logout"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="15dp" />
    </LinearLayout>
<!--
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Inserir Token"
        android:id="@+id/btInsTok"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="15dp"
        />
-->
</RelativeLayout>

